# project-robotica-team-6

./: README.md
arduino/ultrasound/: ultrasound.ino
documentatie/: angular_tracker_documentatie.md  kobuki_mapper.md
documentatie/images/: map.psd
nodes/angular_tracker/: package.xml
nodes/angular_tracker/launch/: object_tracker.launch
nodes/angular_tracker/src/: angular_tracker.cpp
nodes/autonome/: CMakeLists.txt  package.xml
nodes/autonome/launch/: drive.launch
nodes/autonome/src/: autonome.cpp  autonome.h
nodes/kobuki_autonome/: CMakeLists.txt  package.xml
nodes/kobuki_autonome/include/kobuki_autonome/: drive_controller.hpp
nodes/kobuki_autonome/launch/: drive.launch
nodes/kobuki_autonome/plugins/: nodelet_plugins.xml
nodes/kobuki_autonome/src/: nodelet.cpp
nodes/kobuki_controller_tutorial/src/: nodelet.cpp
nodes/kobuki_depth/: CMakeLists.txt  package.xml
nodes/kobuki_depth/launch/: start.launch
nodes/kobuki_depth/src/: kobuki_depth.cpp
nodes/kobuki_depth_proc/: CMakeLists.txt  package.xml
nodes/kobuki_depth_proc/launch/: depth.launch
nodes/kobuki_depth_proc/src/: kobuki_depth_proc.cpp
nodes/kobuki_drive/: CMakeLists.txt  package.xml
nodes/kobuki_drive/include/kobuki_drive/: drive_controller.hpp
nodes/kobuki_drive/launch/: random_walker_app.launch
nodes/kobuki_drive/plugins/: nodelet_plugins.xml
nodes/kobuki_drive/src/: nodelet.cpp
nodes/kobuki_mapper/: CMakeLists.txt  package.xml
nodes/kobuki_mapper/docs/: add_module.md
nodes/kobuki_mapper/launch/: start.launch
nodes/kobuki_mapper/msg/: GridPoint.msg  Info.msg  Obstacle.msg
nodes/kobuki_mapper/src/: kobuki_mapper.cpp  map.cpp  map.h  module_loader.cpp  module_loader.h  pathfinder.cpp  pathfinder.h  robot.cpp  robot.h  rotation.cpp  rotation.h  square.cpp  square.h
nodes/kobuki_mapper/src/modules/: arm.cpp  arm.h  battery.cpp  battery.h  bumper.cpp  bumper.h  button.cpp  button.h  drive.cpp  drive.h  info_publisher.cpp  info_publisher.h  location.cpp  location.h  module.cpp  module.h  object_tracker.cpp  object_tracker.h  ultrasonic.cpp  ultrasonic.h
nodes/kobuki_random_walker/launch/: random_walker_app.launch
nodes/kobuki_ultrasone/: CMakeLists.txt  package.xml
nodes/kobuki_ultrasone/launch/: start.launch
nodes/kobuki_ultrasone/msg/: UltrasoneSensors.msg
nodes/kobuki_ultrasone/src/: kobuki_ultrasone.cpp
nodes/kobuki_walker/: CMakeLists.txt  package.xml
nodes/kobuki_walker/include/kobuki_walker/: walker_controller.cpp  walker_controller.h  walker_controller.hpp
nodes/kobuki_walker/launch/: autonome.launch  test.launch
nodes/kobuki_walker/plugins/: nodelet_plugins.xml
nodes/kobuki_walker/src/: nodelet.cpp
nodes/kobuki_walker_OUD_KAPOT/: CMakeLists.txt  package.xml
nodes/kobuki_walker_OUD_KAPOT/include/kobuki_walker/: walker_controller.cpp  walker_controller.h
nodes/kobuki_walker_OUD_KAPOT/launch/: autonome.launch
nodes/kobuki_walker_OUD_KAPOT/plugins/: nodelet_plugins.xml
nodes/kobuki_walker_OUD_KAPOT/src/: nodelet.cpp  nodelet.h
nodes/mqtt_controller/: package.xml
nodes/mqtt_controller/src/: mqtt_controller.cpp
nodes/pointcloud_to_laserscan/launch/: sample_node.launch  sample_nodelet.launch
nodes/robot_arm/: CMakeLists.txt  README.md  config.yaml  config.yaml.bak  package.xml  start.launch
nodes/robot_arm/include/: arm.h  arm_segment.h  math_helpers.h
nodes/robot_arm/src/: arm.cpp  arm_segment.cpp
nodes/robot_arm/srv/: GetArmPosition.srv  GetHandState.srv  SetArmPosition.srv
nodes/ros_astra_launch/launch/: astra.launch
nodes/vision/: CMakeLists.txt
nodes/vision/launch/: object_tracker.launch
nodes/vision/src/: vision.cpp
website/: index.html
website/css/: style.css
website/javascript/: colour.js  grid.js  mqtt.js  script.js
workspace/devel/: .catkin  .rosinstall  setup.sh
workspace/devel/include/astra_camera/: AstraConfig.h
workspace/devel/include/vision/: SetTrackingColours.h  TrackedPosition.h
workspace/devel/lib/astra_camera/: astra_camera_node  astra_list_devices  astra_test_wrapper  astra_usb_reset
workspace/devel/lib/driving/: driving
workspace/devel/lib/pkgconfig/: astra_camera.pc  astra_launch.pc  bottle_pickup.pc  driving.pc  robot_arm.pc  vision.pc
workspace/devel/lib/python2.7/dist-packages/astra_camera/cfg/: AstraConfig.py
workspace/devel/lib/python2.7/dist-packages/vision/msg/: _SetTrackingColours.py  _TrackedPosition.py  __init__.py
workspace/devel/lib/vision/: tracker
workspace/devel/share/astra_camera/cmake/: astra_cameraConfig.cmake
workspace/devel/share/astra_launch/cmake/: astra_launchConfig.cmake
workspace/devel/share/bottle_pickup/cmake/: bottle_pickupConfig.cmake
workspace/devel/share/common-lisp/ros/vision/msg/: SetTrackingColours.lisp  TrackedPosition.lisp  _package.lisp  _package_SetTrackingColours.lisp  _package_TrackedPosition.lisp  vision-msg.asd
workspace/devel/share/driving/cmake/: drivingConfig.cmake
workspace/devel/share/gennodejs/ros/vision/msg/: SetTrackingColours.js  TrackedPosition.js  _index.js
workspace/devel/share/robot_arm/cmake/: robot_arm-msg-paths.cmake  robot_armConfig.cmake
workspace/devel/share/roseus/ros/astra_camera/: manifest.l
workspace/devel/share/roseus/ros/vision/: manifest.l
workspace/devel/share/roseus/ros/vision/msg/: SetTrackingColours.l  TrackedPosition.l
workspace/devel/share/vision/cmake/: vision-msg-extras.cmake  vision-msg-paths.cmake  visionConfig.cmake
workspace/install/: _setup_util.py
workspace/install/lib/pkgconfig/: driving.pc
workspace/install/share/driving/: package.xml
workspace/install/share/driving/cmake/: drivingConfig.cmake
workspace/src/angular_tracker/: CMakeLists.txt
workspace/src/mqtt_controller/: CMakeLists.txt
workspace/src/mqtt_controller/launch/: object_tracker.launch
workspace/src/mqtt_controller/msg/: SetTrackingColours.msg
workspace/src/vision/src/: vision.cpp
workspace/src/walker/: CMakeLists.txt  package.xml
workspace/src/walker/launch/: autonome.launch
workspace/src/walker/src/: walker.cpp  walker.h
