<?xml version="1.0"?>
<package>
  <name>kobuki_depth</name>
  <version>0.0.0</version>
  <description>The kobuki_depth_proc package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>kobuki_mapper</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_msgs</run_depend>

</package>
