<package>
    <name>walker</name>
    <version>0.0.1</version>
    <description>
        Autonome walker
    </description>
    <maintainer email="todo@todo.todo">todo</maintainer>

    <license>Doe wat je niet laten kan</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>ecl_threads</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>kobuki_msgs</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>yocs_controllers</build_depend>

    <run_depend>ecl_threads</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>kobuki_msgs</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>yocs_controllers</run_depend>
    <run_depend>yocs_cmd_vel_mux</run_depend>

</package>